<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/cardview"
    app:cardElevation="2dp"
    app:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">


        <ImageButton
            android:id="@+id/recipe_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:background="@color/white"
            android:contentDescription="@string/recipeImg_contentDescription" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/recipe_img"
            android:layout_centerHorizontal="true"
            android:background="#80000000"
            android:ellipsize="end"
            android:fontFamily="serif"
            android:gravity="center"
            android:lines="2"
            android:padding="8dp"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/cookTime_text"
            android:layout_width="125dp"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/cooking"
            android:fontFamily="casual"
            android:gravity="center"

            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="35dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/cookTime_text"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/favorite_button_contentDescription" />

        <ImageView
            android:id="@+id/clock"
            android:layout_width="33dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/cookTime_text"
            app:srcCompat="@drawable/cooking_time"
            android:contentDescription="@string/clcokImage_contentDescription" />


    </RelativeLayout>


</android.support.v7.widget.CardView>