<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="false"
    android:background="@drawable/searchbackground"
    android:theme="@android:style/Theme.Holo.Light.NoActionBar"
    android:windowSoftInputMode="adjustNothing"
    tools:context="com.chandrachud.malaligowda.ingredient.Search.Search"
    tools:layout_editor_absoluteY="25dp">

    <Spinner
        android:id="@+id/sortSpinner"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textSize="24sp"
        app:layout_constraintDimensionRatio="h,16:4"
        app:layout_constraintEnd_toStartOf="@+id/aboutButton"
        app:layout_constraintStart_toEndOf="@+id/FavoriteRecipes"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <MultiAutoCompleteTextView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/search_view_background"
        android:hint="@string/multiline_autoCompleteTextView"
        android:inputType="textCapSentences|textAutoCorrect"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:visibility="visible"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintStart_toEndOf="@+id/voiceRecorder"
         />

    <ImageButton
        android:id="@+id/searchButton"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/TODO_searchButton"
        android:maxHeight="42dp"
        android:maxWidth="42dp"
        android:scaleType="fitCenter"
        android:src="@drawable/search_icon"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <Button
        android:id="@+id/FavoriteRecipes"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif"
        android:text="@string/FavoriteText"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintDimensionRatio="h,16:4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voiceRecorder" />


    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="232dp"
        android:fontFamily="casual"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="w,"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/appName" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/voiceRecorder"
        android:layout_width="45dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="getSpeechInput"
        android:visibility="visible"
        app:backgroundTint="@android:color/transparent"
        app:fabCustomSize="@dimen/fab_icon_size"
        app:layout_constraintStart_toStartOf="parent"

        app:rippleColor="@color/drk_button"
        app:srcCompat="@drawable/microphone" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_BigViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/aboutButton"
        android:layout_width="63dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/info_background"
        android:scaleType="fitCenter"
        app:backgroundTint="@color/white"
        app:fabCustomSize="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton"
        app:rippleColor="@color/floatingButton"
        app:srcCompat="@drawable/info_button" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/about_description"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortSpinner"
        tools:text="@string/about_description" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:isScrollContainer="false"
        android:scrollbars="vertical"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintDimensionRatio="w,16:12.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".25"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutButton" />


</android.support.constraint.ConstraintLayout>
